Fix: vertical text from more info button + vertical alignment top bar's paragraph

--- a/assets/css/index-desktop.css
+++ b/assets/css/index-desktop.css
@@ -159,7 +159,7 @@ body{
     text-align: center;
     text-decoration: none;
     text-transform: capitalize;
-    line-height: 38px;
+    line-height: 40px;
     margin: 32px auto 0;
     color: white;
     font-size: 24px;
